[gd_scene load_steps=3 format=3 uid="uid://ccacyr5ehej7m"]

[ext_resource type="Theme" uid="uid://bqt13gd00jakt" path="res://Themes/Theme.tres" id="1_2q8p4"]
[ext_resource type="Script" path="res://Code/Scenes/UI/HighScoreScreen.gd" id="1_iwhpm"]

[node name="HighScoreScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2q8p4")
script = ExtResource("1_iwhpm")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1022.0
offset_bottom = 734.0
color = Color(0.121569, 0.121569, 0.121569, 0.345098)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 209.0
offset_top = 137.0
offset_right = 819.0
offset_bottom = 552.0
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
bbcode_enabled = true
text = "[center]Reached a highscore of "
metadata/_edit_lock_ = true

[node name="RichTextLabel2" type="RichTextLabel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
bbcode_enabled = true
text = "[center]Reached a highscore of "
metadata/_edit_lock_ = true

[node name="RichTextLabel3" type="RichTextLabel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
bbcode_enabled = true
text = "[center]Insert Name Below"
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 20
metadata/_edit_lock_ = true

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="First" type="Button" parent="VBoxContainer/MarginContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_left = NodePath("../Third")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../Second")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../Second")
focus_previous = NodePath(".")
mouse_filter = 2
button_mask = 0

[node name="Second" type="Button" parent="VBoxContainer/MarginContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_left = NodePath("../First")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../Third")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../Third")
focus_previous = NodePath("../First")
mouse_filter = 2
button_mask = 0

[node name="Third" type="Button" parent="VBoxContainer/MarginContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_left = NodePath("../Second")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../First")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../../../../Submit")
focus_previous = NodePath("../Second")
mouse_filter = 2
button_mask = 0

[node name="Submit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
mouse_filter = 2
button_mask = 0
text = "Submit
"
metadata/_edit_lock_ = true

[connection signal="focus_entered" from="VBoxContainer/MarginContainer/PanelContainer/HBoxContainer/First" to="." method="_on_focus_entered" binds= [0]]
[connection signal="focus_entered" from="VBoxContainer/MarginContainer/PanelContainer/HBoxContainer/Second" to="." method="_on_focus_entered" binds= [1]]
[connection signal="focus_entered" from="VBoxContainer/MarginContainer/PanelContainer/HBoxContainer/Third" to="." method="_on_focus_entered" binds= [2]]
[connection signal="pressed" from="VBoxContainer/Submit" to="." method="_on_submit_pressed"]
